# do-gradient-incident-triage

./: .gitignore  README.md
backend/: .env.example  gradient_client.py  main.py  models.py  pyproject.toml  requirements.txt
backend/.vercel/: project.json
backend/agents/: __init__.py  runbook.py  triage.py
backend/api/: index.py
frontend/: package.json  tailwind.config.ts
frontend/.vercel/: project.json
frontend/app/: globals.css  layout.tsx  page.tsx
