[project]
name = "do-gradient-triage-backend"
version = "0.1.0"
description = "AI On-Call Incident Triage Assistant — DigitalOcean Gradient AI Hackathon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "openai>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
